<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.fasterxml.jackson.module</groupId>
        <artifactId>jackson-modules-java8</artifactId>
        <version>2.9.8-SNAPSHOT</version>
    </parent>
    <artifactId>jackson-module-parameter-names</artifactId>
    <name>Jackson-module-parameter-names</name>
    <packaging>bundle</packaging>
    <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
        introspection of method/constructor parameter names, without having to add explicit property name annotation.
    </description>

    <properties>
        <!-- explicitly target JDK 8 -->
        <javac.src.version>1.8</javac.src.version>
        <javac.target.version>1.8</javac.target.version>

        <jdk.version>1.8</jdk.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- Generate PackageVersion.java into this directory. -->
        <packageVersion.dir>com/fasterxml/jackson/module/paramnames</packageVersion.dir>
        <packageVersion.package>${project.groupId}.paramnames</packageVersion.package>

        <assertj-core.version>3.8.0</assertj-core.version>
        <mockito-core.version>1.10.19</mockito-core.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[1.8,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <inherited>true</inherited>
                <configuration>
                    <source>${javac.src.version}</source>
                    <target>${javac.target.version}</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <optimize>true</optimize>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                        <!-- TODO Put this back when finished with module-info-->
                        <!--<arg>-Werror</arg>-->
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <!-- Inherited from oss-base. Generate PackageVersion.java.-->
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <executions>
                    <execution>
                        <id>process-packageVersion</id>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.plugin.surefire}</version>
                <configuration>
                    <excludes>
                        <exclude>${packageVersion.dir}/failing/*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0.Beta1</version>
                <executions>
                    <execution>
                        <id>add-module-infos</id>
                        <phase>package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                            <module>
                                <moduleInfoFile>
                                    src/moditect/module-info.java
                                </moduleInfoFile>
                            </module>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


    <profiles>
        <profile>
            <id>jdk11</id>
            <properties>
                <javac.src.version>1.11</javac.src.version>
                <javac.target.version>1.11</javac.target.version>

                <jdk.version>1.11</jdk.version>
                <maven.compiler.source>1.11</maven.compiler.source>
                <maven.compiler.target>1.11</maven.compiler.target>
                <maven.compiler.release>1.11</maven.compiler.release>
            </properties>
            <!-- Not Necessary, but useful-->
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.22.0</version>
                        <configuration>
                            <skipTests>false</skipTests>
                            <argLine>
                                --illegal-access=permit
                            </argLine>
                            <excludes>
                                <exclude>com/fasterxml/jackson/**/failing/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <!-- Yes.. -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.0.1</version>
                        <configuration>
                            <detectJavaApiLink>false</detectJavaApiLink>
                            <offlineLinks>
                                <offlineLink>
                                    <url>https://docs.oracle.com/javase/${maven.compiler.release}/docs/api/</url>
                                    <location>${project.basedir}</location>
                                </offlineLink>
                            </offlineLinks>
                            <failOnError>false</failOnError>
                        </configuration>
                    </plugin>
                    <!-- Allows you to switch builds quickly and make sure it all works-->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.7</version>
                        <executions>
                            <execution>
                                <id>add-source</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>src/moditect</source>
                                        <source>src/main/java</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

</project>
